# tabulon

./: .gitignore  ANALYSE-JEU-DISTANCE.md  ARCHITECTURE.md  DEVELOPMENT.md  README.md  compil.sh  development-etat-courant.patch  extensions-modules-v2.patch  extensions-zip-refresh-readme.patch  fix-main-conflict-markers.patch  package-lock.json  package.json  readme-user-vision.patch
app/: package-lock.json  package.json  tabulon.css
app/content/: asset-rewrite.js  book-history.html  book-history.js  book.html  book.js  camera-view.html  camera-view.js  clock-setup.html  clock-setup.js  clock.html  clock.js  css-url-rewrite.js  extensions.html  extensions.js  game.html  game.js  history.html  history.js  hub.html  hub.js  info.html  info.js  invitation.html  invitation.js  localized-field.js  moves.html  moves.js  open-position.html  open-position.js  play.html  play.js  players.html  players.js  remote-channel.js  remote-peer-channel.js  remote-peer-protocol.js  remote-relay-protocol.js  save-template.html  save-template.js  show-position.html  (+9 more)
dist-minimal-4inarow/browser/: CONTRIBUTING.md  jocly-allgames.js  jocly.aiworker.js  (+1 more)
scripts/: check-dist.mjs  check-jocly-compat.mjs  check-remote-relay.mjs  check-webrtc-webview.py  export-all.mjs  fix-appimage.mjs  make-extension.mjs  make-minimal-dist.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: appimage_compat.rs  dist_override.rs  lib.rs  main.rs  state.rs  window_manager.rs
src-tauri/src/commands/: extension_cmds.rs  fs_cmds.rs  hub_cmds.rs  match_cmds.rs  mod.rs  peer_cmds.rs  template_cmds.rs  video_cmds.rs  window_cmds.rs
tests/: fixtures-classic-chess2.pjn  run-tests.mjs  test-book.mjs  test-capture-2d.mjs  test-clock-setup.mjs  test-clock.mjs  test-css-url-rewrite.mjs  test-dist-override.mjs  test-export-all.mjs  test-extensions.mjs  test-fix-appimage.mjs  test-history.mjs  test-hub-degraded.mjs  test-hub-integration.mjs  test-hub-nojocly.mjs  test-i18n-completeness.mjs  test-i18n.mjs  test-localized-field.mjs  test-minimal-dist.mjs  test-play-saveload.mjs  test-remote-channel.mjs  test-remote-peer-channel.mjs  test-remote-peer-protocol.mjs  test-remote-relay-protocol.mjs  test-tauri-bridge-injection.mjs  test-template.mjs  test-video.mjs
(+908 files in other folders)
